[gd_scene load_steps=6 format=3 uid="uid://dtuk3xi0s4h4w"]

[ext_resource type="Script" path="res://Scripts/game_hud.gd" id="1_36u2n"]
[ext_resource type="FontFile" uid="uid://dpp84wuchugmh" path="res://Assets/Fonts/mago3.ttf" id="8_dxkmp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68k5q"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_chbrc"]
default_font = ExtResource("8_dxkmp")
default_font_size = 32

[sub_resource type="Theme" id="Theme_e00pi"]

[node name="GameHUD" type="Control"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_36u2n")

[node name="LivesHintTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreDataColorTimer" type="Timer" parent="."]
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_68k5q")

[node name="Rows" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_chbrc")
theme_override_constants/separation = 5

[node name="Row1" type="Control" parent="PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="LivesHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.5
offset_right = 86.0
offset_bottom = 13.5
grow_vertical = 2
size_flags_horizontal = 8
theme = SubResource("Theme_e00pi")

[node name="LivesLbl" type="Label" parent="PanelContainer/Rows/Row1/LivesHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Lives:"

[node name="LivesData" type="Label" parent="PanelContainer/Rows/Row1/LivesHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "3"

[node name="TimeHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -12.5
offset_right = 63.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="TimeLbl" type="Label" parent="PanelContainer/Rows/Row1/TimeHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Time:"

[node name="TimeData" type="Label" parent="PanelContainer/Rows/Row1/TimeHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "0.00"

[node name="ScoreHBox" type="HBoxContainer" parent="PanelContainer/Rows/Row1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -12.5
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8

[node name="ScoreLbl" type="Label" parent="PanelContainer/Rows/Row1/ScoreHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "Score:"

[node name="ScoreData" type="Label" parent="PanelContainer/Rows/Row1/ScoreHBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 4
text = "00000000"

[node name="Row2" type="HBoxContainer" parent="PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PromptData" type="RichTextLabel" parent="PanelContainer/Rows/Row2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 3
bbcode_enabled = true
text = "Placeholder text ;)"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesHint" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 60.0
offset_top = 28.0
offset_right = 76.0
offset_bottom = 41.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("8_dxkmp")
bbcode_enabled = true
text = "[color=green]+1[/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="LivesHintTimer" to="." method="_on_lives_hint_timer_timeout"]
[connection signal="timeout" from="ScoreDataColorTimer" to="." method="_on_score_color_timer_timeout"]
